--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     //Add library
 
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.lguipeng:BubbleView:1.0.1'
     implementation 'com.google.code.gson:gson:2.8.2'
 
